--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
         div#msg-container {
             min-height: 5vh;
         }
+		div#footer {
+			position: absolute;
+			bottom: 0;
+		}
     </style>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
@@ -212,5 +216,12 @@
         <div id="msg-container" class="container text-center border border-1 border-secondary rounded-4 mt-4 fs-4 align-items-center">
             <div id="msg-text" class="py-2"></div>
         </div>
+		<div id="footer" class="w-100 d-flex border-top border-secondary flex-row align-items-center justify-content-evenly pt-2 pb-3">
+			<div>
+				<p class="m-0">Developed by Adrichu00</p>
+				<a href="https://github.com/Adrichu00/WhichBox/" target="_blank" title="Source Code">
+					Source Code
+				</a>
+		</div>
     </body>
 </html>
